--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bootstrap-vue": "^2.0.0-rc.9",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "moment": "^2.22.1",
     "popper.js": "^1.14.1",
+    "sweetalert": "^2.1.0",
     "sweetalert2": "^7.15.1",
     "vform": "^1.0.0",
     "vue": "^2.5.16",
