--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^2.2.0",
     "moment": "^2.22.1",
     "popper.js": "^1.14.1",
+    "ramda": "^0.25.0",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.15.1",
     "vform": "^1.0.0",
